2003-07-05  Wakaba  <w@suika.fam.cx>

	* Catalog.pm: New module.
	* EntityManager.pm: Bug fixes such as character class fix.
	* Error.pm (new, raise_error, _get_node_path, _get_node_position): New methods.

2003-06-30  Wakaba  <w@suika.fam.cx>

	* Parser.pm (_parse_start_tag): New.

2003-06-29  Wakaba  <w@suika.fam.cx>

	* Parser.pm (_parse_document_entity, _parse_ignored_section): New.
	* Error.pm: New errors related to marked section.
	* EntityManager.pm (get_entity, get_entities): Bug fixes and caching.
	(is_standalone_document): New function.

2003-06-27  Wakaba  <w@suika.fam.cx>

	* Parser.pm: Give entity type before EntityManager->get_external_entity is called.
	* Error.pm: Added some new errors related to media type values.
	* EntityManager.pm (_guess_entity_encoding, _check_media_type): New.
	(default_uri_resolver): Check and use media type and charset.

2003-06-26  Wakaba  <w@suika.fam.cx>

	* Parser.pm (_parse_xml_or_text_declaration): New method.
	* EntityManager.pm (default_uri_resolver): Use Parser->_parse_xml_or_text_declaration to remove text declaration.
	(get_external_entity): Reset uri/entity_type/line/pos statuses.
	* Error.pm: Some new errors for invalid XML declaration.

2003-06-17  Wakaba  <w@suika.fam.cx>

	* Parser.pm: 
	- Report error when entity or notation name contains colon.
	- Some bug fixes about line/position counting for error reporting.
	* EntityManager.pm (get_entity): Returns pre-defined entities 
	immediately (before seeking into DTD node is occured).  (As Web SGML
	defined.)
	* Error.pm (ERR_PREDEFINED_ENTITY): New error.
	* Parser.pm (_parse_entity_declaration): Raise error if it's XML's
	pre-defined entity and its replacement text does not match to that
	of pre-defined entity.

2003-06-16  Wakaba  <w@suika.fam.cx>

	* Parser.pm: Replacing of entity references is supported.
	* Error.pm: New.
	* EntityManager.pm: New.

2003-05-25  Wakaba  <w@offweb.ddo.jp>

	* DOM.pm, DOM/: New.

2003-05-24  Wakaba  <w@offweb.ddo.jp>
