@@ -1,3 +1,9 @@
+2003-07-06  Wakaba  <w@suika.fam.cx>
+
+	* Catalog.pm (_resolve_ext_id_w_catalog_file): Bug fixes:
+	- Resort delegated catalog entry files list by length of matching prefix.
+	- Add 'next' catalog entry files imeddiately after current file.
+
 2003-07-05  Wakaba  <w@suika.fam.cx>
 
 	* Catalog.pm: New module.
